WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286975
AX: [Text Marker] TextUnit::Line on webkit.org not including link in the same line
https://bugs.webkit.org/show_bug.cgi?id=286975
Summary
AX: [Text Marker] TextUnit::Line on webkit.org not including link in the same...
Joshua Hoffman
Reported
2025-02-03 17:08:32 PST
On WebKit.org (with the new ax-thread text markers enabled), when using VoiceOVer to navigate down with the down arrow, the current line for "apps on macOS, iOS, and Linux. Get started contributing code, or reporting bugs." does not include the text starting with "Get started...".
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-03 17:08:41 PST
<
rdar://problem/144126836
>
Joshua Hoffman
Comment 2
2025-02-03 17:09:13 PST
rdar://143915609
Joshua Hoffman
Comment 3
2025-02-03 17:28:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39951
EWS
Comment 4
2025-02-05 14:28:35 PST
Committed
289892@main
(4cbd5593231d): <
https://commits.webkit.org/289892@main
> Reviewed commits have been landed. Closing PR #39951 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug